# CodingTest

./: CLAUDE.md  README.md  config.json  problem_mapping.js  t
epi_cpp/: CMakeLists.txt  README.md
epi_cpp/01_PrimitiveType/: CMakeLists.txt  README.md
epi_cpp/02_Arrays/: CMakeLists.txt  README.md
epi_cpp/03_Strings/: CMakeLists.txt  README.md
epi_cpp/04_LinkedLists/: CMakeLists.txt  README.md
epi_cpp/04_PrimitiveType/: CMakeLists.txt
epi_cpp/05_PrimitiveTypes/: CMakeLists.txt
epi_cpp/05_StacksAndQueue/: CMakeLists.txt  README.md
epi_cpp/06_BinaryTrees/: CMakeLists.txt  README.md
epi_cpp/07_Heaps/: CMakeLists.txt  README.md
epi_cpp/07_LinkedLists/: CMakeLists.txt
epi_cpp/07_Strings/: CMakeLists.txt
epi_cpp/08_Searching/: CMakeLists.txt  README.md
epi_cpp/08_StacksAndQueue/: CMakeLists.txt
epi_cpp/09_BinaryTrees/: CMakeLists.txt
epi_cpp/09_HashTables/: CMakeLists.txt  README.md
epi_cpp/10_BinaryTrees/: CMakeLists.txt
epi_cpp/10_Sorting/: CMakeLists.txt  README.md
epi_cpp/11_BinarySearchTrees/: CMakeLists.txt  README.md
epi_cpp/11_Heaps/: CMakeLists.txt
epi_cpp/12_HashTables/: CMakeLists.txt
epi_cpp/12_Recursion/: CMakeLists.txt  README.md
epi_cpp/12_Searching/: CMakeLists.txt
epi_cpp/13_DynamicProgramming/: CMakeLists.txt  README.md
epi_cpp/14_GreedyInvariants/: CMakeLists.txt  README.md
epi_cpp/14_Sorting/: CMakeLists.txt
epi_cpp/15_BinarySearchTrees/: CMakeLists.txt
epi_cpp/15_Graphs/: CMakeLists.txt  README.md
epi_cpp/16_ParallelComputing/: README.md
epi_cpp/17_DesignProblems/: README.md
epi_python/: bst_node.py  (+6 more)
(+113 files in other folders)
